@@ -12,3 +12,4 @@
 * [GH-3] Complete SPARQL grammar
 * [GH-26] Check if a pattern is a leaf or not
 * [GH-28] Update management of whitespace & comments in the PEG grammar
+* [GH-31] Add method for getting the subject associated to the POF
